bulma adicionado no interpolacao.html

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -18,7 +18,7 @@
         </section>
     </main>  
     <footer>
-        <div class="footer">
+        <div class="rodape">
             <p>Desenvolvido por: ChatGPT, Thiago França e Lucas Andrey</p>
         </div>
     </footer>
