--- a/static/styles.css
+++ b/static/styles.css
@@ -72,7 +72,7 @@ h1 {
     margin-bottom: 20px;
 }
 
-.footer {
+.rodape {
     text-align: center;
     padding: 10px;
     background-color: var(--cor-primaria);
